--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
     />
-    <title>Didier Hategekimana portfolio</title>
+    <title>Didier| Personal portfolio, web developer,MERN stack</title>
     <meta charset="utf-8" />
     <meta
       name="description"
@@ -17,7 +17,7 @@
     <meta property="og:url" content="https://www.didier.world/" />
     <meta
       property="og:description"
-      content="Personal portfolio for Didier Hategekimana, a fullstack based in Sydney, Australia | Javascrips works"
+      content="Personal portfolio for Didier Hategekimana, a fullstack web developer based in Sydney, Australia | Javascrips works"
     />
     <meta name="author" content="Didier Hategekimana" />
     <meta
