--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,26 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
     />
-    <title>Didier| Personal portfolio, web developer,MERN stack</title>
     <meta charset="utf-8" />
     <meta
+      name="title"
+      content="Didier | Personal portfolio, web developer,MERN stack,  Sydney based 💻🌐"
+    />
+    <meta
       name="description"
-      content="Personal portfolio for Didier Hategekimana, Front-end developer based in Sydney, Australia"
+      content="A personal portfolio for Didier Hategekimana, a full-stack web developer based in Sydney, Australia, Contact me, let's build something good together [MongoDB, Express, React, Node,]"
     />
     <meta name="twitter:card" content="summary" />
-    <meta property="og:title" content="Didier Hategekimana portfolio" />
+    <meta property="og:title" content="Didier | Personal portfolio" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://www.didier.world/" />
     <meta
-      property="og:description"
-      content="Personal portfolio for Didier Hategekimana, a fullstack web developer based in Sydney, Australia | Javascrips works"
+      name="keywords"
+      content="Web developer, full-stack developer, HTML developer, CSS developer, React developer, web development, web dev, front-end developer, front-end, backend developer"
     />
-    <meta name="author" content="Didier Hategekimana" />
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="language" content="English" />
     <meta
       name="keywords"
       content="Web developer, fullstack developer, HTML developer, CSS developer, React developer, web development, web dev, front-end developer, front-end, backend developer"
@@ -32,6 +37,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=no"
     />
+    <meta name="revisit-after" content="2 days" />
+    <meta name="author" content="Didier Hategeka" />
     <link rel="stylesheet" href="index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
