--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
       name="keywords"
       content="Web developer, full-stack developer, HTML developer, CSS developer, React developer, web development, web dev, front-end developer, front-end, backend developer"
     />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="index, follow" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="language" content="English" />
@@ -50,6 +52,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css"
     />
+    <!-- favicon -->
+    <link rel="icon" type="image/png" href="assets/favicon.ico" />
+    <title>Didier | Personal portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
     <div id="root"></div>
