--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <meta name="language" content="English" />
     <meta
       name="keywords"
-      content="Web developer, fullstack developer, HTML developer, CSS developer, React developer, web development, web dev, front-end developer, front-end, backend developer"
+      content="Web developer, fullstack developer, HTML developer, CSS developer, React developer, web development, web dev, front-end developer, front-end, backend developer, Didier Hategekimana"
     />
     <meta
       property="og:image"
@@ -40,7 +40,7 @@
       content="width=device-width, initial-scale=1.0, user-scalable=no"
     />
     <meta name="revisit-after" content="2 days" />
-    <meta name="author" content="Didier Hategeka" />
+    <meta name="author" content="Didier Hategekimana" />
     <link rel="stylesheet" href="index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
