--- a/public/404.html
+++ b/public/404.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
@@ -15,14 +15,39 @@
     />
     <link rel="icon" type="image/png" href="assets/favicon.ico" />
     <title>Oops: 404</title>
-</head>
-<body>
-    <div className="container-not-found">
-        <h1 className="heading">404 - Page Not Found</h1>
-        <p className="message">The page you are looking for does not exist.</p>
-        <a to="/" className="link">
-          Go to Home
-        </a>
-      </div>
-</body>
+  </head>
+
+  <body>
+    <div
+      style="
+        background-color: black;
+        color: white;
+        height: 100vh;
+        display: flex;
+        place-items: center;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      "
+    >
+      <h1 style="font-size: 48px; margin-bottom: 16px">404 - Page Not Found</h1>
+      <p style="font-size: 24px; text-align: center; margin-bottom: 24px">
+        The page you are looking for does not exist.
+      </p>
+      <a
+        href="/"
+        style="
+          text-decoration: none;
+          color: inherit;
+          font-size: 18px;
+          padding: 12px 24px;
+          border-radius: 4px;
+          margin-top: 2em;
+          transition: background-color 0.3s ease;
+        "
+      >
+        Go to Home
+      </a>
+    </div>
+  </body>
 </html>
