--- a/public/404.html
+++ b/public/404.html
@@ -28,6 +28,8 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        text-align: center;
+        padding: 1em;
       "
     >
       <h1 style="font-size: 48px; margin-bottom: 16px">404 - Page Not Found</h1>
@@ -44,6 +46,9 @@
           border-radius: 4px;
           margin-top: 2em;
           transition: background-color 0.3s ease;
+          color: aqua;
+          padding-bottom: 3px;
+          border-bottom: 2px solid aqua;
         "
       >
         Go to Home
