Accessibility:user scalable UI

--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,6 @@
       name="keywords"
       content="Web developer, full-stack developer, HTML developer, CSS developer, React developer, web development, web dev, front-end developer, front-end, backend developer"
     />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="index, follow" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="language" content="English" />
@@ -34,10 +32,6 @@
     <meta
       property="og:image"
       content="https://s3.eu-west-2.amazonaws.com/fifteen-uploads/uploads/2016/10/becoming-a-web-developer-in-2016.jpg"
-    />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, user-scalable=no"
     />
     <meta name="revisit-after" content="2 days" />
     <meta name="author" content="Didier Hategekimana" />
@@ -55,7 +49,7 @@
     <!-- favicon -->
     <link rel="icon" type="image/png" href="assets/favicon.ico" />
     <title>Didier | Personal portfolio</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=5"  />
   </head>
   <body>
     <div id="root"></div>
